# docs/swagger.yaml
@@ -72,6 +72,47 @@ definitions:
       size:
         type: integer
     type: object
+  rest.UpdateApplicationInDTO:
+    properties:
+      android_package_name:
+        type: string
+      category_id:
+        type: integer
+      challenges:
+        type: string
+      code_name:
+        type: string
+      default_locale:
+        type: string
+      description:
+        type: string
+      goals:
+        type: string
+      inapp_background_image:
+        type: string
+      inapp_video:
+        type: string
+      location:
+        type: string
+      name:
+        type: string
+      results:
+        type: string
+      safety:
+        type: string
+      short_title:
+        type: string
+      tasks:
+        type: string
+      version:
+        type: string
+      video_cover:
+        type: string
+      web_background_image:
+        type: string
+      web_video:
+        type: string
+    type: object
   rest.VerificationStatusOutDTO:
     properties:
       status:
@@ -253,6 +294,45 @@ paths:
           schema:
             $ref: '#/definitions/rest.ErrorResponseDTO'
       summary: Получить приложение
+      tags:
+      - applications
+    patch:
+      consumes:
+      - application/json
+      description: Обновляет поля приложения. Передавать нужно только те поля, которые
+        требуется изменить.
+      parameters:
+      - description: ID приложения
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Поля для обновления
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/rest.UpdateApplicationInDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.ApplicationOutDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.ErrorResponseDTO'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/rest.ErrorResponseDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/rest.ErrorResponseDTO'
+      summary: Обновить данные приложения
       tags:
       - applications
   /applications/{id}/publish:
