# internal/core/service/model.go
@@ -7,6 +7,28 @@ import (
 
 var ErrNotVerified = errors.New("application must be successfully verified before publishing")
 
+type UpdateApplicationParams struct {
+	CodeName             *string
+	CategoryID           *int64
+	AndroidPackageName   *string
+	DefaultLocale        *string
+	WebVideo             *string
+	InappVideo           *string
+	WebBackgroundImage   *string
+	InappBackgroundImage *string
+	Name                 *string
+	ShortTitle           *string
+	Description          *string
+	Goals                *string
+	Tasks                *string
+	Results              *string
+	Challenges           *string
+	Location             *string
+	VideoCover           *string
+	Safety               *string
+	Version              *string
+}
+
 type UploadBuildParams struct {
 	DeveloperID          string
 	CodeName             string
